--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,12 @@
 {% block breadcrumbs %}
     {% clear_breadcrumbs %}
     {% breadcrumb "Home" 'home' %}
-{% endblock %}
+{% endblock breadcrumbs %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>
-            {% block title %}Rectory Apps{% endblock %}
+            {% block title %}Rectory Apps{% endblock title %}
         </title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
