More linter more happy

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-
 {% block content %}
     <h1>Rectory Apps</h1>
-    <p>This system is for Rectory School use only. If you have any questions on its usage, please contact the Technology Department.</p>
-{% endblock %}
+    <p>
+        This system is for Rectory School use only. If you have any questions on its usage, please contact the Technology Department.
+    </p>
+{% endblock content %}
